# haske-python

./: .gitignore  Cargo.toml  README.md  haske-0.1.0-cp312-cp312-win_amd64.whl  haske-0.1.0-cp37-abi3-manylinux_2_17_x86_64.manylinux2014_x86_64.whl  haske-0.1.0-cp37-abi3-win_amd64.whl  haske-0.1.0-py3-none-any.whl  haske-0.2.11-py3-none-any.whl  haske-0.2.12-py3-none-any.whl  haske-0.2.13-py3-none-any.whl  haske-0.2.2-cp39-abi3-manylinux_2_18_x86_64.whl  haske-0.2.2-cp39-abi3-win_amd64.whl  haske_core-0.1.0-cp312-cp312-win_amd64.whl  haske_core-0.1.0-cp37-abi3-manylinux_2_17_x86_64.manylinux2014_x86_64.whl  haske_core-0.1.0-cp37-abi3-win_amd64.whl  haske_core-0.2.2-cp39-abi3-manylinux_2_18_x86_64.whl  haske_core-0.2.2-cp39-abi3-win_amd64.whl  haske_core-0.2.7-cp39-abi3-manylinux_2_17_x86_64.manylinux2014_x86_64.whl  haske_core-0.2.7-cp39-abi3-manylinux_2_18_x86_64.whl  haske_core-0.2.7-cp39-abi3-win_amd64.whl  haske_core-0.2.8-cp39-abi3-macosx_10_12_x86_64.whl  haske_core-0.2.8-cp39-abi3-manylinux_2_17_x86_64.manylinux2014_x86_64.whl  haske_core-0.2.8-cp39-abi3-win_amd64.whl  pyproject.toml  requirements.txt  setup.py
benchmark/: benchmark_fixed.py  benchmark_orm.py  fastapi_app.py  fastapi_orm.py  flask_orm.py  haske_app.py  haske_orm.py  test.db
benchmark/instance/: test.db
docs/: README.md  SUMMARY.md
docs/core-concepts/: README.md  middleware.md  requests-and-responses.md  routing.md  sessions.md
docs/data/: README.md  orm.md
docs/frontend/: README.md  static-assets.md  templates.md
docs/getting-started/: README.md  installation.md  project-structure.md  quickstart.md
docs/operations/: testing-deployment.md
docs/realtime/: README.md  websockets.md
docs/reference/: configuration.md
docs/tooling/: cli.md
examples/api_app/: app.py  models.py
examples/blog_app/: app.py  models.py
examples/blog_app/static/css/: style.css
examples/blog_app/static/js/: app.js
examples/blog_app/templates/: about.html  base.html  create.html  edit.html  index.html  layout.html  login.html  new.html  post.html
examples/blog_app/templates/auth/: login.html  register.html
examples/hello_world/: app.py
examples/js_integration_app/: README.md  app.py  docs.txt
examples/js_integration_app/frontend/my-react-app/src/: App.js
examples/js_integration_app/templates/: index.html
examples/orm-example/: main.py  models.py
haske/: __init__.py  __main__.py  admin.py  app.py  auth.py  cache.py  cli.py  exceptions.py  middleware.py  orm.py  request.py  response.py  routing.py  static.py  templates.py  ws.py
src/: lib.rs
src/haske.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
