[package]
name = "haske-python"
version = "0.2.7"
edition = "2021"

[lib]
name = "haske"         # This must match the #[pymodule] name
crate-type = ["cdylib"]
path = "src/lib.rs"   # 👈 this line ensures Cargo finds the module


[dependencies]
pyo3 = { version = "0.26", features = ["extension-module", "auto-initialize", "abi3-py39"] }
haske-core = { path = "../haske-core" }

[profile.release]
strip = "symbols"
lto = true

[package.metadata.maturin]
# include a Python package named "haske" with files in "python" folder
# folder structure:
# project_root/python/haske/__init__.py
