[build-system]
# Use a maturin range compatible with modern installations (you reported 1.9.4)
requires = ["maturin>=1.0,<2.0", "setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "haske"
version = "0.2.12"
description = "A high-performance Python web framework with Rust extensions"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [
  { name = "Yusee Habibu", email = "yusee201520@gmail.com" },
]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Rust",
  "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
]

dependencies = [
  "starlette>=0.27.0",
  "uvicorn>=0.20.0",
  "jinja2>=3.0.0",
  "sqlalchemy>=1.4.0",
  "typer>=0.9.0",
  "python-multipart>=0.0.5",
  "httpx>=0.24.0",
  "itsdangerous>=2.1.0",
  "haske-core",
  "watchdog",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
  "pytest-asyncio>=0.20.0",
  "black>=22.0.0",
  "mypy>=0.991",
  "ruff>=0.0.260",
]

[project.urls]
Homepage = "https://github.com/Python-Katsina/haske-python"
Documentation = "https://haske.readthedocs.io"
Repository = "https://github.com/Python-Katsina/haske-python"
Changelog = "https://github.com/Python-Katsina/haske-python/releases"

[tool.setuptools.packages.find]
where = ["."]
include = ["haske*"]

